--- a/content/projects/en/yukayeke.mdx
+++ b/content/projects/en/yukayeke.mdx
@@ -1,20 +1,25 @@
----
-title: "Yukayeke Playa"
-description: "Multilingual web platform for tourist lodging in Añasco, developed with modern architecture and focus on user experience and bookings."
+## // content/projects/en/yukayeke-playa.mdx
+
+title: "Yukayeke Playa Resort Website"
+description: "A multilingual (ES/EN) website for a beach resort, featuring modern design and optimized performance."
 language: "en"
 date: 2024-03-01
-technologies: ["Next.js 14", "TypeScript", "Tailwind CSS", "i18n", "Vercel"]
+technologies: ["Next.js", "TypeScript", "Tailwind CSS", "Vercel"]
 image: "/yukayeke-preview.png"
-demo: "https://yukayekeplaya.com"
-github: "https://github.com/temiban013/yukayeke.git"
+urlSitio: "https://www.yukayekeplaya.com"
 featured: true
+
 ---
 
-# Yukayeke Playa Project
+# Yukayeke Playa Resort Website
 
-This was a complete digital transformation project that included:
+This project involved creating a modern, responsive website for Yukayeke Playa Resort, with full multilingual support (English and Spanish).
 
-- Multilingual website (Spanish/English)
-- Custom booking system
-- Integration with payment processors
-- Responsive design for all devices
+## Key Features
+
+- Multilingual content management
+- Responsive design using Tailwind CSS
+- High-performance static site generation
+- Optimized images and assets
+- SEO-friendly structure
+- Interactive booking integration
