--- a/content/sections/en/hero.mdx
+++ b/content/sections/en/hero.mdx
@@ -1,9 +1,11 @@
----
+## // content/sections/en/hero.mdx
+
 title: "Hero Section"
 language: "en"
 section: "hero"
+
 ---
 
-# Developing Scalable and Efficient Web Solutions
+# Transforming Complex Ideas into Elegant Digital Solutions
 
-Hello! I'm Mario Ayala, a Software Engineer with over 20 years of experience in enterprise application development. With a background in Computer Science and extensive experience in companies like Disney, I specialize in creating robust and scalable digital solutions that transform ideas into functional realities. My approach combines technical precision with intuitive design to deliver exceptional digital experiences. Shall we collaborate on your next project? 🚀
+With over 25 years in software engineering, I've evolved from enterprise systems to modern web applications. I specialize in Next.js, TypeScript, and cloud technologies, focusing on creating high-performance applications with exceptional user experiences.
