--- a/content/sections/es/hero.mdx
+++ b/content/sections/es/hero.mdx
@@ -1,9 +1,11 @@
----
+## // content/sections/es/hero.mdx
+
 title: "Sección Hero"
 language: "es"
 section: "hero"
+
 ---
 
-# Desarrollando Soluciones Web Escalables y Eficientes
+# Transformando Ideas Complejas en Soluciones Digitales Elegantes
 
-¡Saludos! Soy Mario Ayala, un Ingeniero de Software con más de 20 años de experiencia en desarrollo de aplicaciones empresariales. Con formación académica en Ciencias de la Computación y amplia experiencia en empresas de renombre como Disney, me especializo en crear soluciones digitales robustas y escalables que transforman ideas en realidades funcionales. Mi enfoque combina precisión técnica con diseño intuitivo para ofrecer experiencias digitales excepcionales. ¿Colaboramos en su próximo proyecto? 🚀
+Con más de 25 años en ingeniería de software, he evolucionado desde sistemas empresariales hasta aplicaciones web modernas. Me especializo en Next.js, TypeScript y tecnologías cloud, enfocándome en crear aplicaciones de alto rendimiento con experiencias de usuario excepcionales.
